# Soberana

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  ingest.yml
docs/: despliegue.md  operacion.md  vision.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/data/: alturas.json  amps.geojson  antartida.geojson  bases_militares.geojson  events.json  extranjerizacion.geojson  ficz_focz.geojson  hidrovia.geojson  infraestructura_critica.geojson  puertos.geojson  replay_demo.json  sar_detections.geojson  territorio_argentino.geojson  territorios_ocupados.geojson  tierra.geojson  viirs_boats.geojson  zee.geojson
frontend/src/: App.tsx  Colaborar.tsx  EventLog.tsx  InfoCard.tsx  MapView.tsx  Metodologia.tsx  PixelFlag.tsx  TimeBar.tsx  config.ts  flagSprites.ts  layers.ts  main.tsx  map_style.ts  styles.css
server/: Dockerfile  pyproject.toml
server/soberana/: __init__.py  config.py  db.py
server/soberana/api/: main.py
server/soberana/ingest/: ais_live.py  alturas.py  demo_data.py  export_frio.py  extranjerizacion.py  gfw.py  hidrovia.py  infraestructura.py  puertos.py  static_layers.py  tierra.py  viirs.py
server/tests/: test_smoke.py
