[project]
name = "soberana-server"
version = "0.1.0"
description = "API e ingesta de datos del mapa Soberana (actividad marítima, fluvial y aérea en territorio argentino)"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
geo = ["shapely>=2.0"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["soberana*"]
